--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -1,64 +1,29 @@
+@import "variables";
 
 
-/* Connect fonts */
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../../fonts/OpenSans-SemiBold.woff2') format('woff2'),
-  url('../../fonts/OpenSans-SemiBold.woff') format('woff'),
-  url('../../fonts/OpenSans-SemiBold.ttf') format('truetype');
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
+/* Common styles */
+
+body {
+  font-family: $main-font;
+  font-weight: 400;
+  font-size: $font-md;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../../fonts/OpenSans-Bold.woff2') format('woff2'),
-  url('../../fonts/OpenSans-Bold.woff') format('woff'),
-  url('../../fonts/OpenSans-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
+.container-md,
+.container-lg {
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
-@font-face {
-  font-family: 'Roboto';
-  src: url('../../fonts/Roboto-Regular.woff2') format('woff2'),
-  url('../../fonts/Roboto-Regular.woff') format('woff'),
-  url('../../fonts/Roboto-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
+.container-lg {
+  max-width: $container-lg-width;
 }
 
-@font-face {
-  font-family: 'Quicksand';
-  src: url('../../fonts/Quicksand-Bold.woff2') format('woff2'),
-  url('../../fonts/Quicksand-Bold.woff') format('woff'),
-  url('../../fonts/Quicksand-Bold.ttf') format('truetype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
+.container-md {
+  max-width: $container-md-width;
 }
-
-@font-face {
-  font-family: 'Quicksand';
-  src: url('../../fonts/Quicksand-Medium.woff2') format('woff2'),
-  url('../../fonts/Quicksand-Medium.woff') format('woff'),
-  url('../../fonts/Quicksand-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
+.row {
+  display: flex;
 }
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('../../fonts/Roboto-Medium.woff2') format('woff2'),
-  url('../../fonts/Roboto-Medium.woff') format('woff'),
-  url('../../fonts/Roboto-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
