--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -24,6 +24,33 @@ body {
 .container-md {
   max-width: $container-md-width;
 }
+
+a {
+  color: $accent-color;
+  text-decoration: none;
+}
+
+.list-unstyled {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+
 .row {
   display: flex;
+}
+.col {
+  width: 100%;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-end {
+  justify-content: flex-end;
+}
+.align-items-center {
+  align-items: center;
 }
