--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -6,3 +6,8 @@ $font-md: 15px;
 
 $container-lg-width: 1235px;
 $container-md-width: 920px;
+
+$accent-color: #8D96BD;
+$secondary-accent-color: #5E81FE;
+
+$font-quicksand: "Quicksand", sans-serif;
