--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -1,6 +1,9 @@
 .header {
   padding: 27px 0;
   border: 1px solid #D8E3FE;
+  font-family: $font-quicksand;
+  font-size: $font-sm;
+
   &__navigation {
     gap: 73px;
     &-logo {
@@ -11,11 +14,30 @@
         height: $logo-dimensions;
         background-color: $secondary-accent-color;
         border-radius: 50%;
+
+        &:hover {
+          background-color: mediumorchid;
+          transform: scale(1.5);
+          transition: .5s;
+        }
       }
     }
     nav {
       ul {
         gap: 42px;
+
+        a {
+          &.active,
+          &:hover:not(.active) {
+            font-weight: 700;
+            color: $secondary-accent-color;
+          }
+          &:hover:not(.active) {
+            font-weight: 400;
+            transition: .4s;
+            transform: scale(1.5);
+          }
+        }
       }
     }
   }
@@ -37,7 +59,9 @@
         padding: 13px 21px;
         text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         font-size: 13px;
+        font-weight: 700;
+        }
       }
     }
   }
-}
+
