--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -2,13 +2,19 @@
 
 
 $main-font: "Roboto", sans-serif;
+$font-quicksand: "Quicksand", sans-serif;
 $font-md: 15px;
 $font-sm: 12px;
+$font-tablet-size: 20px;
 
 $container-lg-width: 1235px;
 $container-md-width: 920px;
 
+$header_height: 83px;
+
 $accent-color: #8D96BD;
 $secondary-accent-color: #5E81FE;
 
-$font-quicksand: "Quicksand", sans-serif;
+$accent-transition: .5s;
+
+
