--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -18,3 +18,9 @@ $secondary-accent-color: #5E81FE;
 $accent-transition: .5s;
 
 
+/* Variables for media breakpoints */
+
+$tablet-screen-size: 1024px;
+$tablet-mini-size: 768px;
+$phone-screen-size: 480px;
+$phone-mini-size: 320px;
