Make .banner section (Mobile version) Make .companies section (Desktop/Mobile version)

--- a/scss/components/banner/banner.scss
+++ b/scss/components/banner/banner.scss
@@ -1,6 +1,5 @@
 .banner {
-  height: 100vh;
-  max-height: 570px;
+  height: 100%;
   width: 100vw;
   background: url("../../../assets/images/banner_background.png") no-repeat 100% 100% /* Center */;
   background-size: cover;
