--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -334,8 +334,7 @@ a {
 }
 
 .banner {
-  height: 100vh;
-  max-height: 570px;
+  height: 100%;
   width: 100vw;
   background: url("../../../assets/images/banner_background.png") no-repeat 100% 100%;
   background-size: cover;
@@ -377,6 +376,23 @@ a {
 }
 .banner .container-md .banner__play a:hover {
   opacity: 0.5;
+}
+
+.companies {
+  margin: 60px 0 60px 0;
+}
+.companies .container-md {
+  display: flex;
+  justify-content: center;
+  gap: 76px;
+}
+
+@media (max-width: 875px) {
+  .companies .container-md {
+    flex-direction: column;
+    align-items: center;
+    gap: 37px;
+  }
 }
 
 /*# sourceMappingURL=stylesheet.css.map */
