--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -21,6 +21,7 @@ $accent-transition: .5s;
 /* Variables for media breakpoints */
 
 $tablet-screen-size: 1024px;
+$media-breakpoint-tablet: 875px;
 $tablet-mini-size: 768px;
 $phone-screen-size: 480px;
 $phone-mini-size: 320px;
