--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 html {
   height: 100%;
 }
@@ -87,7 +88,7 @@ select {
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .container-md,
@@ -108,12 +109,17 @@ body {
 a {
   color: #8D96BD;
   text-decoration: none;
+  display: inline-block;
   /*
   &:active {
     color: pink !important;
     transition: .4s;
   }
   */
+}
+
+p {
+  color: #8D96BD;
 }
 
 .list-unstyled {
@@ -138,8 +144,30 @@ a {
   justify-content: flex-end;
 }
 
+.justify-content-center {
+  justify-content: center;
+}
+
+.direction-column {
+  flex-direction: column;
+}
+
+.direction-row {
+  flex-direction: row;
+}
+
 .align-items-center {
   align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.banner:before, .banner:after {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 /* Variables for media breakpoints */
@@ -193,11 +221,14 @@ a {
   font-style: normal;
   font-display: swap;
 }
+/* Bootstrap icons */
 .header {
   padding: 27px 0;
   border: 1px solid #D8E3FE;
   font-family: "Quicksand", sans-serif;
-  font-size: 12px;
+  font-size: 18px;
+  max-height: 82px;
+  min-height: 82px;
 }
 .header__navigation {
   gap: 73px;
@@ -273,8 +304,8 @@ a {
 @media (max-width: 875px) {
   .header {
     position: relative;
-    min-height: 83px;
-    max-height: 83px;
+    min-height: 82px;
+    max-height: 82px;
   }
   .header__social-cta {
     display: none;
@@ -309,7 +340,7 @@ a {
     width: 100%;
     display: none;
     position: absolute;
-    top: 83px;
+    top: 82px;
     left: 0;
     background: linear-gradient(101.48deg, #E9EFFF 41.56%, #E0E9FF 81.53%);
   }
@@ -334,48 +365,90 @@ a {
 }
 
 .banner {
+  background: #F4F7FF;
+  height: calc(100vh - 82px);
+  position: relative;
+  min-height: 550px;
+}
+.banner:before, .banner:after {
+  content: "";
+  display: block;
+  width: 100%;
   height: 100%;
-  width: 100vw;
-  background: url("../../../assets/images/banner_background.png") no-repeat 100% 100%;
-  background-size: cover;
-  resize: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.banner .container-md {
-  padding-top: 92px;
-  padding-bottom: 200px;
+.banner:before {
+  background-image: url(../../../assets/images/clouds.svg);
+  z-index: 1;
 }
-.banner .container-md .banner__text p {
-  text-align: center;
-  font-size: 10px;
-  font-family: "Roboto", sans-serif;
+.banner:after {
+  background-image: url("../../../assets/images/chart.svg");
+  z-index: 0;
+}
+.banner__wrapper {
+  z-index: 2;
+  position: relative;
+  padding-top: 22vh;
+  height: 100%;
+}
+.banner__content {
+  width: 100%;
+}
+.banner__title-wrapper {
+  gap: 28px;
+}
+.banner__subtitle {
   font-weight: 500;
+  font-size: 16px;
+  line-height: 12px;
+  text-transform: uppercase;
   color: #3D4F9F;
 }
-.banner .container-md .banner__title h1 {
-  text-align: center;
-  font-size: 48px;
+.banner__title {
   font-family: "Quicksand", sans-serif;
+  font-size: 48px;
   font-weight: 300;
   color: #3D4F9F;
 }
-.banner .container-md .banner__title h1 span {
-  font-weight: 500;
+.banner__description {
+  line-height: 35px;
+  max-width: 700px;
+  margin: 0 auto;
+  word-spacing: 3px;
+  letter-spacing: 1px;
+  padding: 0 5px;
 }
-.banner .container-md .banner__description p {
-  text-align: center;
-  font-size: 15px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  color: #8D96BD;
-  width: 100%;
-  max-width: 502px;
-  margin: 18px auto 0;
+.banner__play {
+  margin-top: 20px;
 }
-.banner .container-md .banner__play {
-  text-align: center;
+.banner__play a {
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background-color: white;
+  box-shadow: 0 10px 50px rgba(201, 209, 231, 0.6);
+  margin: 0 auto;
 }
-.banner .container-md .banner__play a:hover {
-  opacity: 0.5;
+.banner__controls {
+  gap: 12px;
+  position: absolute;
+  bottom: 28px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.banner__controls-item {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: #D1D6E3;
+}
+.banner__controls-item:hover, .banner__controls-item-active {
+  background-color: #5283FF;
+  transition: 0.4s;
+  transform: scale(1.2);
+  cursor: pointer;
 }
 
 .companies {
