--- a/scss/common/_fonts.scss
+++ b/scss/common/_fonts.scss
@@ -70,3 +70,8 @@
   font-style: normal;
   font-display: swap;
 }
+
+
+/* Bootstrap icons */
+
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
