--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -28,6 +28,7 @@ body {
 a {
   color: $accent-color;
   text-decoration: none;
+  display: inline-block;
 
   /*
   &:active {
@@ -35,6 +36,10 @@ a {
     transition: .4s;
   }
   */
+}
+
+p {
+  color: $accent-color;
 }
 
 .list-unstyled {
@@ -58,6 +63,21 @@ a {
 .justify-content-end {
   justify-content: flex-end;
 }
+.justify-content-center {
+  justify-content: center;
+}
+.direction-column {
+  flex-direction: column;
+}
+
+.direction-row {
+  flex-direction: row;
+}
+
 .align-items-center {
   align-items: center;
+}
+
+.text-center {
+  text-align: center;
 }
