--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -3,14 +3,15 @@
 
 $main-font: "Roboto", sans-serif;
 $font-quicksand: "Quicksand", sans-serif;
-$font-md: 15px;
-$font-sm: 12px;
+$font-md: 20px;
+$font-sm: 18px;
+$font-xs: 16px;
 $font-tablet-size: 20px;
 
 $container-lg-width: 1235px;
 $container-md-width: 920px;
 
-$header_height: 83px;
+$header_height: 82px;
 
 $accent-color: #8D96BD;
 $secondary-accent-color: #5E81FE;
