--- a/scss/components/banner/banner.scss
+++ b/scss/components/banner/banner.scss
@@ -1,46 +1,109 @@
 .banner {
-  height: 100%;
-  width: 100vw;
-  background: url("../../../assets/images/banner_background.png") no-repeat 100% 100% /* Center */;
-  background-size: cover;
-  resize: none;
-  .container-md {
-    padding-top: 92px;
-    padding-bottom: 200px;
-    .banner__text p {
-      text-align: center;
-      font-size: 10px;
-      font-family: $main-font;
-      font-weight: 500;
-      color: #3D4F9F;
-    }
-    .banner__title h1 {
-      text-align: center;
-      font-size: 48px;
-      font-family: $font-quicksand;
-      font-weight: 300;
-      color: #3D4F9F;
-      span {
-        font-weight: 500;
-      }
-    }
-    .banner__description p {
-      text-align: center;
-      font-size: $font-md;
-      font-family: $main-font;
-      font-weight: 400;
-      color: $accent-color;
+   $banner-color: #3D4F9F;
+
+   background: #F4F7FF /* linear-gradient(180deg, #F4F7FF 0%, #F1F5FF 100%) */
+;
+   height: calc(100vh - #{$header-height});
+   position: relative;
+   min-height: 550px;
+
+   &:before,
+   &:after {
+      @extend %bg-default;
+
+      content: "";
+      display: block;
       width: 100%;
-      max-width: 502px;
-      margin: 18px auto 0;
-    }
-    .banner__play {
-      text-align: center;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+   }
+
+   &:before {
+      background-image: url(../../../assets/images/clouds.svg);
+      z-index: 1;
+   }
+
+   &:after {
+      background-image: url("../../../assets/images/chart.svg");
+      z-index: 0;
+   }
+
+   &__wrapper {
+      z-index: 2;
+      position: relative;
+      padding-top: 22vh;
+      height: 100%;
+   }
+
+   &__content {
+      width: 100%;
+   }
+
+   &__title-wrapper {
+      gap: 28px;
+   }
+
+   &__main-title {
+
+   }
+
+   &__subtitle {
+      font-weight: 500;
+      font-size: $font-xs;
+      line-height: 12px;
+      text-transform: uppercase;
+      color: $banner-color;
+   }
+
+   &__title {
+      font-family: $font-quicksand;
+      font-size: 48px;
+      font-weight: 300;
+      color: $banner-color;
+   }
+
+   &__description {
+      line-height: 35px;
+      max-width: 700px;
+      margin: 0 auto;
+      word-spacing: 3px;
+      letter-spacing: 1px;
+      padding: 0 5px;
+   }
+
+   &__play {
+      margin-top: 20px;
       a {
-        &:hover {
-          opacity: 0.5;
-        }
+         width: 52px;
+         height: 52px;
+         border-radius: 50%;
+         background-color: white;
+         box-shadow: 0 10px 50px rgba(201, 209, 231, 0.6);
+         margin: 0 auto;
       }
-    }
-  }
+   }
+
+   &__controls {
+      gap: 12px;
+      position: absolute;
+      bottom: 28px;
+      left: 50%;
+      transform: translateX(-50%);
+      &-item {
+         width: 18px;
+         height: 18px;
+         border-radius: 50%;
+         background-color: #D1D6E3;
+
+         &:hover,
+         &-active {
+            background-color: #5283FF;
+            transition: .4s;
+            transform: scale(1.2);
+            cursor: pointer;
+         }
+      }
+   }
 }
