--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -91,6 +91,10 @@ body {
   font-size: 20px;
 }
 
+main {
+  margin-top: 82px;
+}
+
 .container-md,
 .container-lg {
   width: 100%;
@@ -223,12 +227,20 @@ p {
 }
 /* Bootstrap icons */
 .header {
-  padding: 27px 0;
   border: 1px solid #D8E3FE;
   font-family: "Quicksand", sans-serif;
   font-size: 18px;
   max-height: 82px;
   min-height: 82px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 99;
+}
+.header__wrapper {
+  padding: 18px 0;
 }
 .header__navigation {
   gap: 73px;
@@ -293,7 +305,7 @@ p {
 .header__media-menu-btn {
   display: none;
 }
-@media (min-width: 875px) {
+@media (min-width: 1024px) {
   .header [for=media-menu-btn] {
     display: none;
   }
@@ -301,9 +313,15 @@ p {
     display: none;
   }
 }
-@media (max-width: 875px) {
-  .header {
+@media (max-width: 1024px) {
+  .header nav {
+    z-index: 100;
+    box-shadow: 0 13px 14px -11px rgba(0, 0, 0, 0.62);
+  }
+  .header__wrapper {
     position: relative;
+  }
+  .header {
     min-height: 82px;
     max-height: 82px;
   }
@@ -452,7 +470,7 @@ p {
 }
 
 .companies {
-  margin: 60px 0 60px 0;
+  padding: 60px 0 60px 0;
 }
 .companies .container-md {
   display: flex;
