--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -9,7 +9,9 @@ body {
   font-weight: 400;
   font-size: $font-md;
 }
-
+main {
+  margin-top: $header_height;
+}
 .container-md,
 .container-lg {
   width: 100%;
