--- a/scss/components/companies/companies.scss
+++ b/scss/components/companies/companies.scss
@@ -1,5 +1,5 @@
 .companies {
-  margin: 60px 0 60px 0;
+  padding: 60px 0 60px 0;
   .container-md {
     display: flex;
     justify-content: center;
