--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -24,5 +24,8 @@ $accent-transition: .5s;
 $tablet-screen-size: 1024px;
 $media-breakpoint-tablet: 875px;
 $tablet-mini-size: 768px;
+$tablet-extra-mini: 690px;
+$medium-phone-tablet: 606px;
 $phone-screen-size: 480px;
+$extra-medium: 404px;
 $phone-mini-size: 320px;
