--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -168,6 +168,11 @@ p {
   text-align: center;
 }
 
+.active-btn-started {
+  background-color: white;
+  color: #565F82;
+}
+
 .banner:before, .banner:after {
   background-repeat: no-repeat;
   background-position: center center;
@@ -254,7 +259,7 @@ p {
 }
 .header__navigation-logo a:hover {
   background-color: mediumorchid;
-  transform: scale(1.5);
+  transform: scale(1.3);
   transition: 0.5s;
 }
 .header__navigation nav ul {
@@ -267,7 +272,7 @@ p {
 .header__navigation nav ul a:hover:not(.active) {
   font-weight: 400;
   transition: 0.5s;
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 .header__social {
   gap: 44px;
@@ -615,6 +620,73 @@ p {
     position: static;
     margin: 0 auto;
     max-width: 320px;
+  }
+}
+.started {
+  padding: 91px 0;
+  background: url("../../../assets/images/started_clouds.png");
+  background-color: #6888FF;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+.started__wrapper-content {
+  text-align: center;
+}
+.started__subtitles {
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  text-transform: uppercase;
+  color: white;
+}
+.started__title {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 48px;
+  line-height: 60px;
+  color: #FFFFFF;
+  margin-top: 16px;
+}
+.started__title span {
+  font-weight: 500;
+}
+.started__description {
+  font-size: 15px;
+  line-height: 29px;
+  text-align: center;
+  color: #FFFFFF;
+  width: 75%;
+  margin: 28px auto 0;
+}
+.started__btn-left {
+  margin-top: 28px;
+  font-family: "Quicksand", sans-serif;
+  font-size: 13px;
+  color: #565F82;
+  padding: 10px;
+  border: 1px solid #8D96BD;
+}
+.started__btn-left:hover {
+  background-color: white;
+  color: #565F82;
+}
+.started__btn-right {
+  margin-top: 28px;
+  font-family: "Quicksand", sans-serif;
+  font-size: 13px;
+  color: #C7D3FF;
+  padding: 10px;
+  border: 1px solid #8D96BD;
+}
+.started__btn-right:hover {
+  background-color: white;
+  color: #565F82;
+}
+
+@media (max-width: 470px) {
+  .started__controls {
+    flex-direction: column;
   }
 }
 
