Make section .app (Desktop version)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -622,6 +622,103 @@ p {
     max-width: 320px;
   }
 }
+.app {
+  padding: 141px 0 172px;
+  background-image: url("../../../assets/images/clouds.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+}
+.app__subtitles {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 12px;
+  color: #3D4F9F;
+  text-align: center;
+}
+.app__title {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  color: #3D4F9F;
+  margin-top: 20px;
+}
+.app__main-content {
+  margin-top: 92px;
+}
+.app__box {
+  flex-direction: column;
+  align-items: center;
+  width: 25%;
+}
+.app__box-title {
+  margin-top: 33px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: #4074F8;
+}
+.app__box-description {
+  margin-top: 25px;
+  width: 100%;
+  text-align: center;
+}
+.app__control-panel {
+  margin-top: 92px;
+  justify-content: center;
+  gap: 48px;
+}
+.app__get-started, .app__read-more {
+  padding: 14px 16px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.app__read-more {
+  background-color: #FFD7D7;
+  color: #D43F3F;
+}
+.app__get-started {
+  background-color: #D2E1FF;
+  color: #3A79FF;
+}
+.app__get-started:hover, .app__read-more:hover {
+  transform: scale(1.2);
+  transition: 0.4s;
+}
+.app__option-control {
+  position: relative;
+  padding: 14px 0;
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  text-align: center;
+  color: #DAE4FE;
+}
+.app__option-control:before {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: -30px;
+  border: 1px solid #DAE4FE;
+  width: 15px;
+}
+.app__option-control:after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 35px;
+  border: 1px solid #DAE4FE;
+  width: 15px;
+}
+
 .started {
   padding: 91px 0;
   background: url("../../../assets/images/started_clouds.png");
