--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -866,6 +866,124 @@ p {
     text-align: center;
   }
 }
+.blog {
+  background-color: #F5F8FF;
+}
+.blog .container-md {
+  padding: 104px 0 104px 0;
+}
+.blog__right-part-content {
+  width: 50%;
+}
+.blog__subtitles {
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 12px;
+  text-transform: uppercase;
+  color: #3D4F9F;
+}
+.blog__title {
+  margin-top: 20px;
+  font-family: "Quicksand", sans-serif;
+  text-align: center;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #3D4F9F;
+}
+.blog__main-content {
+  background-color: white;
+  margin: 92px 0 92px 0;
+  padding: 64px 63px;
+  border: 1px solid #D2E1FF;
+  gap: 67px;
+}
+.blog__right-title-content {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  font-size: 36px;
+  line-height: 45px;
+  color: #3D4F9F;
+}
+.blog__right-description-content {
+  margin-top: 30px;
+  font-size: 14px;
+  line-height: 27px;
+  color: #8D96BD;
+}
+.blog__right-control-content {
+  margin-top: 31px;
+  gap: 38px;
+}
+.blog__btn {
+  padding: 13px 16px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 13px;
+  text-align: center;
+  color: #A6B6DA;
+  border: 1px solid transparent;
+}
+.blog__btn:hover {
+  border: 1px solid #D2E1FF;
+  background-color: #D2E1FF;
+  color: #3A79FF;
+  padding: 13px 16px;
+  transition: 0.3s;
+}
+.blog__left-part-content {
+  gap: 12px;
+  width: 50%;
+}
+.blog__side-left figure {
+  width: 100%;
+  height: 100%;
+  max-width: 267px;
+  max-height: 267px;
+  background-image: url(../../../assets/icons/blog_search.png), url(../../../assets/images/Rectangle_3.png);
+  background-repeat: no-repeat, no-repeat;
+  background-size: 30% 30%, 100% 100%;
+  background-position: center center;
+}
+.blog__side-left figure img {
+  width: 100%;
+  height: 100%;
+  max-width: 267px;
+  max-height: 267px;
+}
+.blog__side-left figure img:hover {
+  opacity: 0;
+  transition: 0.6s;
+}
+.blog__side-right {
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 12px;
+}
+.blog__side-right figure img {
+  height: 100%;
+  max-width: 126px;
+  max-height: 126px;
+}
+.blog__controls {
+  justify-content: center;
+  gap: 12px;
+}
+.blog__controls-item {
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: #D1D6E3;
+}
+.blog__controls-item:hover, .blog__controls-item-active {
+  background-color: #5283FF;
+  transition: 0.4s;
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
 .started {
   padding: 91px 0;
   background: url("../../../assets/images/started_clouds.png");
