Make .questions section (Desktop)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1126,6 +1126,89 @@ p {
     right: 41%;
   }
 }
+.questions .container-md {
+  padding: 175px 0 175px;
+  margin: 0 auto;
+}
+.questions__subtitles {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 12px;
+  text-transform: uppercase;
+  color: #3D4F9F;
+  text-align: center;
+}
+.questions__title {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  color: #3D4F9F;
+  margin-top: 20px;
+  margin-bottom: 68px;
+}
+.questions__hide-question-block {
+  gap: 24px;
+  border-bottom: 1px solid #D8E3FE;
+  width: 100%;
+  max-width: 743px;
+  margin: 0 auto;
+}
+.questions__question-description {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.questions__icon {
+  margin-top: 25px;
+}
+.questions__open-question-block {
+  width: 100%;
+  max-width: 743px;
+  margin: 0 auto;
+  gap: 25px;
+}
+.questions__open-question-block figure img {
+  margin: 20px 0 18px;
+}
+.questions__title-open-question {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #495274;
+  margin: 16px 0 18px;
+}
+.questions__open-description {
+  font-size: 14px;
+  line-height: 27px;
+  color: #8D96BD;
+  margin-left: 8%;
+  width: 100%;
+  max-width: 391px;
+}
+.questions__wrapper-open-block {
+  width: 100%;
+  max-width: 743px;
+  margin: 0 auto;
+  border-bottom: 1px solid #D8E3FE;
+  padding-bottom: 30px;
+  gap: 77px;
+}
+.questions__btn-documentation {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #7382A3;
+  padding: 10px 16px;
+  border: 1px solid #E8ECF4;
+  background-color: #E8ECF4;
+}
+.questions__btn-documentation:hover {
+  transition: 0.4s;
+  transform: scale(1.2);
+}
+
 .started {
   padding: 91px 0;
   background: url("../../../assets/images/started_clouds.png");
