--- a/scss/components/questions/questions.scss
+++ b/scss/components/questions/questions.scss
@@ -1,6 +1,6 @@
 .questions {
   .container-md {
-    padding: 175px 0 175px;
+    padding: 175px 30px 175px;
     margin: 0 auto;
   }
   &__subtitles {
