--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1216,6 +1216,60 @@ p {
     align-items: center;
   }
 }
+.newsletter__wrapper {
+  padding: 118px 0;
+  justify-content: space-between;
+}
+.newsletter__subtitles {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+  color: #3D4F9F;
+}
+.newsletter__description {
+  margin-top: 18px;
+  font-size: 14px;
+  color: #8D96BD;
+  max-width: 330px;
+}
+.newsletter__email {
+  border: 1px solid #EFEFF7;
+  background-color: #EFEFF7;
+  border-radius: 5px;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 21px 120px 21px 23px;
+  color: #7A85AD;
+}
+.newsletter__email:focus {
+  outline: none;
+}
+.newsletter__save-me {
+  padding: 15px 49px 17px;
+  width: 100%;
+  height: 100%;
+  max-width: 184px;
+  max-height: 64px;
+  font-size: 16px;
+  margin-left: 14px;
+  background-color: #4D6CE1;
+  outline: none;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
+  line-height: 16px;
+  border-radius: 5px;
+  border: 2px solid #4D6CE1;
+  color: #FFFFFF;
+}
+.newsletter__save-me:hover {
+  color: #4D6CE1;
+  background-color: white;
+  transition: 0.4s;
+}
+
 .started {
   padding: 91px 0;
   background: url("../../../assets/images/started_clouds.png");
